// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<pagination> demo: > render [all] correctly 1`] = `
<div class="sd-pagination sd-pagination-size-medium"><span class="sd-pagination-total">共 50 条</span>
  <ul class="sd-pagination-list"><span class="sd-pagination-item sd-pagination-item-previous sd-pagination-item-disabled"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M32 8.4 16.444 23.956 32 39.513"></path></svg></span>
    <li class="sd-pagination-item sd-pagination-item-active" pages="5">1</li>
    <li class="sd-pagination-item" pages="5">2</li>
    <li class="sd-pagination-item" pages="5">3</li>
    <li class="sd-pagination-item" pages="5">4</li>
    <li class="sd-pagination-item" pages="5">5</li>
    <!----><span class="sd-pagination-item sd-pagination-item-next"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span>
  </ul><span class="sd-pagination-options"><span class="sd-select-view-single sd-select sd-select-view sd-select-view-size-medium sd-select-view-search"><!----><input class="sd-select-view-input sd-select-view-input-hidden" placeholder="10 条/页" value=""><span class="sd-select-view-value"><span style="width: 100%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" class="sd-ellipsis sd-ellipsis--single-line"><span class="sd-ellipsis-content">10 条/页</span></span>
  <!----></span><span class="sd-select-view-suffix"><button type="button" class="sd-select-view-clear-btn"><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></button><span class="sd-select-view-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down sd-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
  <!----></span></span>
  <!----></span><span class="sd-pagination-jumper"><span class="sd-pagination-jumper-prepend sd-pagination-jumper-text-goto">前往</span><span class="sd-input-wrapper sd-input-number sd-input-number-mode-embed sd-input-number-size-medium sd-pagination-jumper-input"><!----><input class="sd-input sd-input-size-medium" type="text" role="spinbutton" aria-valuemax="5" aria-valuemin="1" aria-valuenow="" value=""><!----><!----></span>
  <!--v-if-->
  <!--v-if--></span>
</div>
`;

exports[`<pagination> demo: > render [basic] correctly 1`] = `
<div class="sd-pagination sd-pagination-size-medium">
  <!---->
  <ul class="sd-pagination-list"><span class="sd-pagination-item sd-pagination-item-previous sd-pagination-item-disabled"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M32 8.4 16.444 23.956 32 39.513"></path></svg></span>
    <li class="sd-pagination-item sd-pagination-item-active" pages="5">1</li>
    <li class="sd-pagination-item" pages="5">2</li>
    <li class="sd-pagination-item" pages="5">3</li>
    <li class="sd-pagination-item" pages="5">4</li>
    <li class="sd-pagination-item" pages="5">5</li>
    <!----><span class="sd-pagination-item sd-pagination-item-next"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span>
  </ul>
  <!---->
  <!---->
</div>
`;

exports[`<pagination> demo: > render [custom] correctly 1`] = `
<div class="sd-pagination sd-pagination-size-medium">
  <!---->
  <ul class="sd-pagination-list"><span class="sd-pagination-item sd-pagination-item-previous sd-pagination-item-disabled"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-send" style="transform: rotate(180deg);" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path stroke-miterlimit="3.864" d="m14 24-7-5V7l34 17L7 41V29zm0 0h25"></path></svg></span>
    <li class="sd-pagination-item sd-pagination-item-active" pages="20"> - 1 - </li>
    <li class="sd-pagination-item" pages="20"> - 2 - </li>
    <li class="sd-pagination-item" pages="20"> - 3 - </li>
    <li class="sd-pagination-item" pages="20"> - 4 - </li>
    <li class="sd-pagination-item" pages="20"> - 5 - </li>
    <li class="sd-pagination-item sd-pagination-item-ellipsis" disabled="false"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-sun-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
        <circle cx="24" cy="24" r="9" fill="currentColor" stroke="none"></circle>
        <path fill="currentColor" stroke="none" d="M21 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-.5.5h-5a.5.5 0 0 1-.5-.5zM21 37.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-.5.5h-5a.5.5 0 0 1-.5-.5zM42.5 21a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-.5.5h-5a.5.5 0 0 1-.5-.5v-5a.5.5 0 0 1 .5-.5zM10.5 21a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-.5.5h-5a.5.5 0 0 1-.5-.5v-5a.5.5 0 0 1 .5-.5zM39.203 34.96a.5.5 0 0 1 0 .707l-3.536 3.536a.5.5 0 0 1-.707 0l-3.535-3.536a.5.5 0 0 1 0-.707l3.535-3.535a.5.5 0 0 1 .707 0zM16.575 12.333a.5.5 0 0 1 0 .707l-3.535 3.535a.5.5 0 0 1-.707 0L8.797 13.04a.5.5 0 0 1 0-.707l3.536-3.536a.5.5 0 0 1 .707 0zM13.04 39.203a.5.5 0 0 1-.707 0l-3.536-3.536a.5.5 0 0 1 0-.707l3.536-3.535a.5.5 0 0 1 .707 0l3.536 3.535a.5.5 0 0 1 0 .707zM35.668 16.575a.5.5 0 0 1-.708 0l-3.535-3.535a.5.5 0 0 1 0-.707l3.535-3.536a.5.5 0 0 1 .708 0l3.535 3.536a.5.5 0 0 1 0 .707z"></path>
      </svg></li>
    <li class="sd-pagination-item" pages="20"> - 20 - </li>
    <!----><span class="sd-pagination-item sd-pagination-item-next"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-send" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path stroke-miterlimit="3.864" d="m14 24-7-5V7l34 17L7 41V29zm0 0h25"></path></svg></span>
  </ul>
  <!---->
  <!---->
</div>
`;

exports[`<pagination> demo: > render [ellipsis] correctly 1`] = `
<div class="sd-pagination sd-pagination-size-medium">
  <!---->
  <ul class="sd-pagination-list"><span class="sd-pagination-item sd-pagination-item-previous sd-pagination-item-disabled"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M32 8.4 16.444 23.956 32 39.513"></path></svg></span>
    <li class="sd-pagination-item sd-pagination-item-active" pages="20">1</li>
    <li class="sd-pagination-item" pages="20">2</li>
    <li class="sd-pagination-item" pages="20">3</li>
    <li class="sd-pagination-item" pages="20">4</li>
    <li class="sd-pagination-item" pages="20">5</li>
    <li class="sd-pagination-item sd-pagination-item-ellipsis" disabled="false"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-more" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
        <path fill="currentColor" stroke="none" d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path>
        <path d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path>
      </svg></li>
    <li class="sd-pagination-item" pages="20">20</li>
    <!----><span class="sd-pagination-item sd-pagination-item-next"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span>
  </ul>
  <!---->
  <!---->
</div>
`;

exports[`<pagination> demo: > render [jumper] correctly 1`] = `
<div class="sd-pagination sd-pagination-size-medium">
  <!---->
  <ul class="sd-pagination-list"><span class="sd-pagination-item sd-pagination-item-previous sd-pagination-item-disabled"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M32 8.4 16.444 23.956 32 39.513"></path></svg></span>
    <li class="sd-pagination-item sd-pagination-item-active" pages="5">1</li>
    <li class="sd-pagination-item" pages="5">2</li>
    <li class="sd-pagination-item" pages="5">3</li>
    <li class="sd-pagination-item" pages="5">4</li>
    <li class="sd-pagination-item" pages="5">5</li>
    <!----><span class="sd-pagination-item sd-pagination-item-next"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span>
  </ul>
  <!----><span class="sd-pagination-jumper"><span class="sd-pagination-jumper-prepend sd-pagination-jumper-text-goto">前往</span><span class="sd-input-wrapper sd-input-number sd-input-number-mode-embed sd-input-number-size-medium sd-pagination-jumper-input"><!----><input class="sd-input sd-input-size-medium" type="text" role="spinbutton" aria-valuemax="5" aria-valuemin="1" aria-valuenow="" value=""><!----><!----></span>
  <!--v-if-->
  <!--v-if--></span>
</div>
`;

exports[`<pagination> demo: > render [page-size] correctly 1`] = `
<div class="sd-pagination sd-pagination-size-medium">
  <!---->
  <ul class="sd-pagination-list"><span class="sd-pagination-item sd-pagination-item-previous sd-pagination-item-disabled"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M32 8.4 16.444 23.956 32 39.513"></path></svg></span>
    <li class="sd-pagination-item sd-pagination-item-active" pages="20">1</li>
    <li class="sd-pagination-item" pages="20">2</li>
    <li class="sd-pagination-item" pages="20">3</li>
    <li class="sd-pagination-item" pages="20">4</li>
    <li class="sd-pagination-item" pages="20">5</li>
    <li class="sd-pagination-item sd-pagination-item-ellipsis" disabled="false"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-more" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
        <path fill="currentColor" stroke="none" d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path>
        <path d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path>
      </svg></li>
    <li class="sd-pagination-item" pages="20">20</li>
    <!----><span class="sd-pagination-item sd-pagination-item-next"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span>
  </ul><span class="sd-pagination-options"><span class="sd-select-view-single sd-select sd-select-view sd-select-view-size-medium sd-select-view-search"><!----><input class="sd-select-view-input sd-select-view-input-hidden" placeholder="10 条/页" value=""><span class="sd-select-view-value"><span style="width: 100%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" class="sd-ellipsis sd-ellipsis--single-line"><span class="sd-ellipsis-content">10 条/页</span></span>
  <!----></span><span class="sd-select-view-suffix"><button type="button" class="sd-select-view-clear-btn"><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></button><span class="sd-select-view-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down sd-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
  <!----></span></span>
  <!----></span>
  <!---->
</div>
`;

exports[`<pagination> demo: > render [simple] correctly 1`] = `
<div class="sd-pagination sd-pagination-size-medium sd-pagination-simple">
  <!----><span class="sd-pagination-simple"><span class="sd-pagination-item sd-pagination-item-previous sd-pagination-item-disabled"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M32 8.4 16.444 23.956 32 39.513"></path></svg></span><span class="sd-pagination-jumper sd-pagination-jumper-simple"><!--v-if--><span class="sd-input-wrapper sd-input-number sd-input-number-mode-embed sd-input-number-size-medium sd-pagination-jumper-input"><!----><input class="sd-input sd-input-size-medium" type="text" role="spinbutton" aria-valuemax="20" aria-valuemin="1" aria-valuenow="1" value="1"><!----><!----></span>
  <!--v-if--><span class="sd-pagination-jumper-separator">/</span><span class="sd-pagination-jumper-total-page">20</span></span><span class="sd-pagination-item sd-pagination-item-next"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span></span>
  <!---->
  <!---->
</div>
`;

exports[`<pagination> demo: > render [size] correctly 1`] = `
<div class="sd-space sd-space-vertical" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item"><span class="sd-radio-group-button sd-radio-group-size-medium sd-radio-group-direction-horizontal"><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="mini"><span class="sd-radio-button-content">Mini</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="small"><span class="sd-radio-button-content">Small</span></label><label class="sd-radio-button sd-radio-checked"><input type="radio" checked="" class="sd-radio-target" value="medium"><span class="sd-radio-button-content">Medium</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="large"><span class="sd-radio-button-content">Large</span></label></span></div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-pagination sd-pagination-size-medium"><span class="sd-pagination-total">共 50 条</span>
      <ul class="sd-pagination-list"><span class="sd-pagination-item sd-pagination-item-previous sd-pagination-item-disabled"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M32 8.4 16.444 23.956 32 39.513"></path></svg></span>
        <li class="sd-pagination-item sd-pagination-item-active" pages="5">1</li>
        <li class="sd-pagination-item" pages="5">2</li>
        <li class="sd-pagination-item" pages="5">3</li>
        <li class="sd-pagination-item" pages="5">4</li>
        <li class="sd-pagination-item" pages="5">5</li>
        <!----><span class="sd-pagination-item sd-pagination-item-next"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span>
      </ul><span class="sd-pagination-options"><span class="sd-select-view-single sd-select sd-select-view sd-select-view-size-medium sd-select-view-search"><!----><input class="sd-select-view-input sd-select-view-input-hidden" placeholder="10 条/页" value=""><span class="sd-select-view-value"><span style="width: 100%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" class="sd-ellipsis sd-ellipsis--single-line"><span class="sd-ellipsis-content">10 条/页</span></span>
      <!----></span><span class="sd-select-view-suffix"><button type="button" class="sd-select-view-clear-btn"><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></button><span class="sd-select-view-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down sd-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
      <!----></span></span>
      <!----></span><span class="sd-pagination-jumper"><span class="sd-pagination-jumper-prepend sd-pagination-jumper-text-goto">前往</span><span class="sd-input-wrapper sd-input-number sd-input-number-mode-embed sd-input-number-size-medium sd-pagination-jumper-input"><!----><input class="sd-input sd-input-size-medium" type="text" role="spinbutton" aria-valuemax="5" aria-valuemin="1" aria-valuenow="" value=""><!----><!----></span>
      <!--v-if-->
      <!--v-if--></span>
    </div>
  </div>
</div>
`;

exports[`<pagination> demo: > render [total] correctly 1`] = `
<div class="sd-pagination sd-pagination-size-medium"><span class="sd-pagination-total">共 200 条</span>
  <ul class="sd-pagination-list"><span class="sd-pagination-item sd-pagination-item-previous sd-pagination-item-disabled"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M32 8.4 16.444 23.956 32 39.513"></path></svg></span>
    <li class="sd-pagination-item sd-pagination-item-active" pages="20">1</li>
    <li class="sd-pagination-item" pages="20">2</li>
    <li class="sd-pagination-item" pages="20">3</li>
    <li class="sd-pagination-item" pages="20">4</li>
    <li class="sd-pagination-item" pages="20">5</li>
    <li class="sd-pagination-item sd-pagination-item-ellipsis" disabled="false"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-more" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
        <path fill="currentColor" stroke="none" d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path>
        <path d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path>
      </svg></li>
    <li class="sd-pagination-item" pages="20">20</li>
    <!----><span class="sd-pagination-item sd-pagination-item-next"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="m16 39.513 15.556-15.557L16 8.4"></path></svg></span>
  </ul>
  <!---->
  <!---->
</div>
`;
